# notes-manager

./: .gitignore  README.md
.github/workflows/: ci.yml
cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  main.cpp
cpp/database/: CMakeLists.txt  database.cpp  database.h
cpp/notes/: CMakeLists.txt  notes.cpp  notes.h
cpp/sqlite3_loc/: CMakeLists.txt
csharp/: README.md
csharp/notes-manager/: Database.cs  Main.cs  Notes.cs  notes-manager.csproj
python/: README.md  main.py  notes.py
