cmake_minimum_required(VERSION 3.0.0)
project(notes)

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC ${SOURCES})

target_include_directories(${PROJECT_NAME} PUBLIC ${DATABASE_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${DATABASE_LIBRARIES})

set(NOTES_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(NOTES_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)